--- a/assets/scribbler-global.css
+++ b/assets/scribbler-global.css
@@ -54,73 +54,13 @@ hr {
 }
 
 /* global components */
+.code--inline {
+    background:var(--white-color);
+}
 
 /* typography */
 .section__title {
   color: var(--primary-color);
-}
-
-/* tabs */
-.tab__container {
-  position: relative;
-}
-
-.tab__container > ul {
-  position: absolute;
-  list-style: none;
-  margin: 0;
-  right: 1rem;
-  top: -2rem;
-  padding-left: 0;
-}
-
-.tab__container .code {
-  white-space: normal;
-  padding: 1rem 1.5rem;
-}
-
-.tab {
-  display: inline-block;
-  padding: 0.3rem 0.5rem;
-  font-weight: 200;
-  cursor: pointer;
-}
-
-.tab.active {
-  border-bottom: 1px solid var(--primary-color);
-  font-weight: 700;
-  display: inline-block;
-}
-
-.tab__pane {
-  display: none;
-}
-
-.tab__pane.active {
-  display: block;
-}
-
-/* code */
-code {
-    background: var(--dark-gray-color);
-}
-
-.code {
-    border-radius: 3px;
-    font-family: Space Mono, SFMono-Regular, Menlo,Monaco, Consolas, Liberation Mono, Courier New, monospace;
-    background: rgb(35, 35, 35);
-    border: 1px solid var(--code-bg-color);
-    color: var(--primary-color-light);
-}
-
-.code--block {
-  white-space: pre-line;
-  padding: 0 1.5rem;
-}
-
-.code--inline {
-  padding: 3px 6px;
-  font-size: 80%;
 }
 
 pre {
@@ -286,7 +226,7 @@ table {
     table td:first-child {
         font-weight: 600;
     }
-    
+
 img.responsive {
     width: 100%;
     max-width: 900px;
@@ -299,7 +239,7 @@ img.responsive {
         font-size:0.95em;
         background-color: white;
     }
-    
+
   nav {
     grid-template-columns: 70px auto;
   }
@@ -325,7 +265,7 @@ img.responsive {
     display: block;
     padding: 0 0 0.5rem 0;
   }
-  
+
     img.responsive {
         width: 100%;
         max-width: 420px;
@@ -361,7 +301,7 @@ blockquote {
     opacity: 0;
     transform: translate3d(0,30px,0);
   }
-  
+
   100% {
     transform: translate3d(0,0,0);
   }
