--- a/assets/scribbler-landing.css
+++ b/assets/scribbler-landing.css
@@ -36,7 +36,7 @@ nav {
     color: white;
     padding: 0 1rem;
     border-radius: 4px;
-    background-color: #232323;
+    background-color: rgba(43, 48, 59, 1);
     min-height: 400px;
     animation: fadeUp 2s;
     box-shadow: 0px 12px 36.8px 9.2px rgba(0, 0, 0, 0.1);
@@ -161,6 +161,46 @@ nav {
     text-align: center;
 }
 
+/* tabs */
+.tab__container {
+    position: relative;
+}
+
+    .tab__container > ul {
+        position: absolute;
+        list-style: none;
+        margin: 0;
+        right: 1rem;
+        top: -2rem;
+        padding-left: 0;
+    }
+
+    .tab__container .code {
+        white-space: normal;
+        padding: 1rem 1.5rem;
+    }
+
+.tab {
+    display: inline-block;
+    padding: 0.3rem 0.5rem;
+    font-weight: 200;
+    cursor: pointer;
+}
+
+    .tab.active {
+        border-bottom: 1px solid var(--accent-color);
+        font-weight: 700;
+        display: inline-block;
+    }
+
+.tab__pane {
+    display: none;
+}
+
+    .tab__pane.active {
+        display: block;
+    }
+
 @media (max-width: 750px) {
     .hero__terminal {
         width: 70%;
@@ -170,10 +210,16 @@ nav {
         right: auto;
         left: 0;
         padding-left: 0;
+        margin-top: 1rem;
     }
 
     .tab__container .code {
-        margin-top: 2rem;
+        margin-top: 1.5rem;
+        margin-left: 0;
+    }
+
+    .tab__pane {
+        margin-top: 1.5rem;
     }
 
     .feature, .keybinding, .changelog__item {
