--- a/assets/scribbler-global.css
+++ b/assets/scribbler-global.css
@@ -1,38 +1,40 @@
 /* css variables*/
 :root {
-  --primary-color: #432E30;
-  --primary-color-light: #8E7474;
-  --accent-color: #FF5050;
-  --accent-color-light: #FFE4E4;
-  --accent-color-dark: #B94B4C;
-  --white-color: #FAFBFC;
-  --light-gray-color: #C6CBD1;
-  --medium-gray-color: #959DA5;
-  --dark-gray-color: #444D56;
-  --bg-color: #F8F8FA;
-  --code-bg-color: #F0F0F0;
+    --primary-color: #432E30;
+    --primary-color-light: #8E7474;
+    --accent-color: #FF5050;
+    --accent-color-light: #FFE4E4;
+    --accent-color-dark: #B94B4C;
+    --white-color: #FAFBFC;
+    --light-gray-color: #C6CBD1;
+    --medium-gray-color: #959DA5;
+    --dark-gray-color: #444D56;
+    --bg-color: #F8F8FA;
+    --code-bg-color: #F0F0F0;
 }
 
 /* normalized */
 html, body {
-  padding: 0;
-  margin: 0;
-  font-family: 'Open Sans', sans-serif;
-  background-color: white;
-  }
+    padding: 0;
+    margin: 0;
+    font-family: 'Open Sans', sans-serif;
+    background-color: white;
+}
 
-h3, h4, h5, h6 {
-    font-family: 'Bookman', serif;
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Maven Pro', serif;
 }
 
 p {
-  font-weight: 300;
-  color: #4A4A4A;
+    font-weight: 300;
+    color: #4A4A4A;
 }
 
 a, a:hover {
-  text-decoration: none;
-  color: var(--primary-color);
+    text-decoration: underline;
+    text-decoration-color: var(--accent-color);
+    /*transition: all 0.3s ease-out;*/
+    color: var(--primary-color);
 }
 
 hr {
@@ -50,17 +52,17 @@ hr {
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 /* global components */
 .code--inline {
-    background:var(--white-color);
+    background: var(--white-color);
 }
 
 /* typography */
 .section__title {
-  color: var(--primary-color);
+    color: var(--primary-color);
 }
 
 pre {
@@ -74,140 +76,140 @@ pre {
 
 /* buttons */
 .button--primary {
-  padding: 10px 22px;
-  background-color: var(--accent-color);
-  color: white;
-  position: relative;
-  text-decoration: none;
-  border: 0;
-  transition: all .3s ease-out;
+    padding: 10px 22px;
+    background-color: var(--accent-color);
+    color: white;
+    position: relative;
+    text-decoration: none;
+    border: 0;
+    transition: all .3s ease-out;
 }
 
-.button--primary:after {
-  position: absolute;
-  content: "";
-  width: 1rem;
-  height: 1rem;
-  background-color: var(--accent-color-light);
-  right: -0.4rem;
-  top: -0.4rem;
-  transition: all 0.3s ease-out;
-}
+    .button--primary:after {
+        position: absolute;
+        content: "";
+        width: 1rem;
+        height: 1rem;
+        background-color: var(--accent-color-light);
+        right: -0.4rem;
+        top: -0.4rem;
+        transition: all 0.3s ease-out;
+    }
 
-.button--primary:hover {
-  text-shadow: 0px 1px 1px var(--accent-color-dark);
-  color: white;
-  transform: translate3D(0, -3px, 0);
-}
+    .button--primary:hover {
+        text-shadow: 0px 1px 1px var(--accent-color-dark);
+        color: white;
+        transform: translate3D(0, -3px, 0);
+    }
 
-.button--primary:hover::after {
-  transform: rotate(90deg);
-}
+        .button--primary:hover::after {
+            transform: rotate(90deg);
+        }
 
 .button--secondary {
-  padding: 10px 22px;
-  border: 2px solid var(--primary-color);
-  transition: all 0.5s ease-out;
+    padding: 10px 22px;
+    border: 2px solid var(--primary-color);
+    transition: all 0.5s ease-out;
 }
 
-.button--secondary:hover {
-  border-color: var(--accent-color);
-  color: var(--accent-color);
-}
+    .button--secondary:hover {
+        border-color: var(--accent-color);
+        color: var(--accent-color);
+    }
 
 /* links */
 .link {
-  text-decoration: none;
-  transition: all 0.3s ease-out;
+    text-decoration: none;
+    transition: all 0.3s ease-out;
 }
 
-.link:hover {
-  color: var(--accent-color);
-}
+    .link:hover {
+        color: var(--accent-color);
+    }
 
 .link--dark {
-  color: var(--primary-color);
+    color: var(--primary-color);
 }
 
 .link--light {
-  color: var(--accent-color);
+    color: var(--accent-color);
 }
 
 /* menu */
 nav {
-  display: grid;
-  grid-template-columns: 70px auto;
+    display: grid;
+    grid-template-columns: 70px auto;
 }
 
 .menu {
-  margin: 0;
-  text-align: right;
-  overflow: hidden;
-  list-style: none;
+    margin: 0;
+    text-align: right;
+    overflow: hidden;
+    list-style: none;
 }
 
 .toggle {
-  display: none;
-  position: relative;
+    display: none;
+    position: relative;
 }
 
-.toggle span,
-.toggle span:before,
-.toggle span:after {
-  content: '';
-  position: absolute;
-  height: 2px;
-  width: 18px;
-  border-radius: 2px;
-  background: var(--primary-color);
-  display: block;
-  cursor: pointer;
-  transition: all 0.3s ease-in-out;
-  right: 0;
-}
+    .toggle span,
+    .toggle span:before,
+    .toggle span:after {
+        content: '';
+        position: absolute;
+        height: 2px;
+        width: 18px;
+        border-radius: 2px;
+        background: var(--primary-color);
+        display: block;
+        cursor: pointer;
+        transition: all 0.3s ease-in-out;
+        right: 0;
+    }
 
-.toggle span:before {
-  top: -6px;
-}
+        .toggle span:before {
+            top: -6px;
+        }
 
-.toggle span:after {
-  bottom: -6px;
-}
+        .toggle span:after {
+            bottom: -6px;
+        }
 
-.toggle.open span{
-  background-color: transparent;
-}
+    .toggle.open span {
+        background-color: transparent;
+    }
 
-.toggle.open span:before,
-.toggle.open span:after {
-  top: 0;
-}
+        .toggle.open span:before,
+        .toggle.open span:after {
+            top: 0;
+        }
 
-.toggle.open span:before {
-  transform: rotate(45deg);
-}
+        .toggle.open span:before {
+            transform: rotate(45deg);
+        }
 
-.toggle.open span:after {
-  transform: rotate(-45deg);
-}
+        .toggle.open span:after {
+            transform: rotate(-45deg);
+        }
 
 .menu__item {
-  padding: 1rem;
-  display: inline-block;
+    padding: 1rem;
+    display: inline-block;
 }
 
-.menu__item.toggle {
-  display: none;
-}
+    .menu__item.toggle {
+        display: none;
+    }
 
 /* table */
 table {
     font-family: 'Fira+Code', monospace;
     font-size: small;
-  border-collapse: collapse;
-  width: 100%;
-  transition: color .3s ease-out;
-  margin-bottom: 2rem;
+    border-collapse: collapse;
+    width: 100%;
+    transition: color .3s ease-out;
+    margin-bottom: 2rem;
 }
 
     table td {
@@ -236,35 +238,35 @@ img.responsive {
 @media screen and (max-width: 600px) {
 
     html, body {
-        font-size:0.95em;
+        font-size: 0.95em;
         background-color: white;
     }
 
-  nav {
-    grid-template-columns: 70px auto;
-  }
+    nav {
+        grid-template-columns: 70px auto;
+    }
 
-  .menu__item{
-    display: none;
-  }
+    .menu__item {
+        display: none;
+    }
 
-  .menu__item.toggle {
-    display: inline-block;
-  }
+        .menu__item.toggle {
+            display: inline-block;
+        }
 
-  .menu {
-    text-align: right;
-    padding: 0.5rem 1rem;
-  }
+    .menu {
+        text-align: right;
+        padding: 0.5rem 1rem;
+    }
 
-  .toggle {
-    display: block;
-  }
+    .toggle {
+        display: block;
+    }
 
-  .menu.responsive .menu__item:not(:first-child) {
-    display: block;
-    padding: 0 0 0.5rem 0;
-  }
+    .menu.responsive .menu__item:not(:first-child) {
+        display: block;
+        padding: 0 0 0.5rem 0;
+    }
 
     img.responsive {
         width: 100%;
@@ -279,15 +281,15 @@ img.responsive {
 
 /* layout */
 .wrapper {
-  margin: 0 auto;
-  width: 70%;
+    margin: 0 auto;
+    width: 70%;
 }
 
 .footer {
-  text-align: center;
-  background-color: var(--primary-color);
-  padding: 2rem;
-  color: white;
+    text-align: center;
+    background-color: var(--primary-color);
+    padding: 2rem;
+    color: white;
 }
 
 blockquote {
@@ -297,12 +299,12 @@ blockquote {
 }
 
 @keyframes fadeUp {
-  0% {
-    opacity: 0;
-    transform: translate3d(0,30px,0);
-  }
+    0% {
+        opacity: 0;
+        transform: translate3d(0,30px,0);
+    }
 
-  100% {
-    transform: translate3d(0,0,0);
-  }
+    100% {
+        transform: translate3d(0,0,0);
+    }
 }
